fixed spacing

--- a/456-UI-Ux/DyslexiaReader/src/app/output-text/output-text.component.scss
+++ b/456-UI-Ux/DyslexiaReader/src/app/output-text/output-text.component.scss
@@ -6,6 +6,6 @@
     font-family: OpenDyslexic3, serif;
     font-size: 25px;
     white-space: pre-wrap;
-    line-height: 1.0;
+    line-height: 1.5;
     padding: 30px 30px;
 }
